# vk-api-example

./: .gitmodules  ChangeLog.md  LICENSE  README.md  build-ghcjs.sh  stack.yaml  vk-api-example.cabal
example/: vk.html
example/css/: audio-player.css  vk.css
example/js/: react-bootstrap.js
executable/: Main.hs
src/VK/: App.hs
src/VK/App/: Actions.hs  AppSettings.hs  Models.hs  Store.hs  Types.hs  Views.hs  Widgets.hs
src/VK/App/Actions/: Types.hs
src/VK/App/Internal/: Orphans.hs  TypePlugs.hs  Utils.hs
src/VK/App/Widgets/: AudioPlayer.hs  ErrorMessage.hs  IncrementalInput.hs  Pagination.hs
src/VK/App/Widgets/AudioPlayer/: Actions.hs  Store.hs  Types.hs  Views.hs
src/VK/App/Widgets/Internal/: IdleTimer.hs
src/VK/DOM/: Router.hs
test/VK/App/: AppSpec.hs
