name:                   vk-api-example
version:                1.0.0
author:                 eryx67 <eryx67@gmail.com>
maintainer:             eryx67 <eryx67@gmail.com>
license:                BSD3
license-file:           LICENSE
-- Synopsis:
-- Description:
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md
                      , ChangeLog.md
                      , example/css/*.css
                      , example/js/*.js
                      , example/fonts/*.eot
                      , example/fonts/*.svg
                      , example/fonts/*.ttf
                      , example/fonts/*.woff
                      , example/fonts/*.woff2
                      , example/*.html

flag debug
     description: Enable debug
     default: False

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  js-sources: jsbits/xhr.js
  exposed-modules: VK.DOM.Router
                 , VK.App.Internal.Orphans
                 , VK.App.Internal.TypePlugs
                 , VK.App.Internal.Utils
                 , VK.App.AppSettings
                 , VK.App.Types
                 , VK.App.Actions.Types
                 , VK.App.Actions
                 , VK.App.Store
                 , VK.App.Models
                 , VK.App.Widgets.Internal.IdleTimer
                 , VK.App.Widgets.AudioPlayer.Types
                 , VK.App.Widgets.AudioPlayer.Store
                 , VK.App.Widgets.AudioPlayer.Actions
                 , VK.App.Widgets.AudioPlayer.Views
                 , VK.App.Widgets.AudioPlayer
                 , VK.App.Widgets.Pagination
                 , VK.App.Widgets.IncrementalInput
                 , VK.App.Widgets.ErrorMessage
                 , VK.App.Widgets
                 , VK.App.Views
                 , VK.App

  -- other-modules:
  build-depends:        aeson >= 0.9
                      , api-builder == 0.11.0.0
                      , deepseq  >= 1.4.1.1
                      , data-default-generics >= 0.3
                      , parsec >= 3.1.9
                      , base >= 4.8 && < 5
                      , bytestring >= 0.10.6.0
                      , react-flux == 1.0.2
                      , scientific >= 0.3.3.8
                      , split >= 0.2.2
                      , template-haskell >= 2.10.0.0
                      , text >= 1.2.1
                      , text-format >= 0.3.1.1
                      , time >= 1.5
                      , transformers >= 0.4.3
                      , web-routes >= 0.27.9
                      , web-routes-th >= 0.22.3
                      , errors >= 2.0.1
                      , fraction >= 0.1
                      , containers >= 0.5.6
                      , timers >= 0.2
                      , suspend >= 0.2
                      , vk-api >= 1.0.0
  default-extensions: CPP

  if impl(ghcjs)
      build-depends: ghcjs-base
  if !impl(ghcjs)
        build-depends: http-client
                     , http-client-tls
  if flag(debug)
    ghc-options: -DDEBUG

executable vk
   ghc-options: -Wall
   cpp-options: -DGHCJS_BROWSER
   default-language: Haskell2010
   hs-source-dirs: executable
   main-is: Main.hs
   build-depends: api-builder
                , base
                , blaze-builder >= 0.4
                , crypto-api >= 0.13
                , data-default-generics
                , deepseq
                , http-types >= 0.8
                , react-flux
                , template-haskell
                , text
                , text-format
                , vk-api
                , vk-api-example
  default-extensions: CPP
  if impl(ghcjs)
     build-depends: ghcjs-base
  if !impl(ghcjs)
     build-depends: http-client
                  , http-client-tls

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base
                      , hspec
                      , webdriver
                      , hspec-webdriver
                      , directory
                      , http-client
                      , http-client-tls
                      , http-types
                      , transformers
                      , text
                      , bytestring
                      , aeson
                      , time
                      , api-builder
                      , errors
                      , split
                      , template-haskell
                      , parsec
                      , scientific
                      , vk-api
  default-extensions: CPP
source-repository head
  Type:                 git


--  Location:
